Java 17 support (#1676)